Found the problem. The max height when applied to the right panel prevented the body element from achieving a height tall enough to envelop all the content that fell outside of the height of the right panel. The height of the body is measured and passed to the #svgbasics which is utilized by the Raphael line drawing script.  So if the body element is not tall enough then the lines may be cropped.

--- a/css.css
+++ b/css.css
@@ -28,12 +28,16 @@ justify-content: space-around;
   background: gold;
   padding: 10px;
   opacity: 0.5;
-  max-height: 150px;
+  
+}
+
+#leftPanel{
+max-height: 150px;
 }
 
 
 #rightPanel {
-margin-top: 250px;
+margin-top: 350px;
 }
 
 strong {
